cedar/test/corpus/cli/policies_1_2.txt
================================================================================
policies_1_2
================================================================================

// https://github.com/cedar-policy/cedar/blob/v4.11.2/cedar-policy-cli/sample-data/sandbox_a/policies_1.cedar#L9-L15

// but Tim is disallowed from viewing the photo
@id("disallow tim policy")
forbid (
  principal == User::"tim",
  action,
  resource == Photo::"VacationPhoto94.jpg"
);

--------------------------------------------------------------------------------

(policy_set
  (comment)
  (comment)
  (policy
    (annotation
      (identifier)
      (string
        (string_content)))
    (effect)
    (scope
      (principal
        (scope_constraint
          (entity_reference
            (identifier)
            (string
              (string_content)))))
      (action)
      (resource
        (scope_constraint
          (entity_reference
            (identifier)
            (string
              (string_content))))))))
