cedar/test/corpus/cli/policies_2_2.txt
================================================================================
policies_2_2
================================================================================

// https://github.com/cedar-policy/cedar/blob/v4.11.2/cedar-policy-cli/sample-data/sandbox_a/policies_2.cedar#L9-L15

// Bob can only view things in the "jane_vacation" album
@id("bob's view policy")
permit (
  principal == User::"bob",
  action == Action::"view",
  resource in Album::"jane_vacation"
);

--------------------------------------------------------------------------------

(policy_set
  (comment)
  (comment)
  (policy
    (annotation
      (identifier)
      (string
        (string_content)))
    (effect)
    (scope
      (principal
        (scope_constraint
          (entity_reference
            (identifier)
            (string
              (string_content)))))
      (action
        (scope_constraint
          (entity_reference
            (identifier)
            (string
              (string_content)))))
      (resource
        (scope_constraint
          (entity_reference
            (identifier)
            (string
              (string_content))))))))
