cedar/test/corpus/cli/policies_4.txt
================================================================================
policies_4
================================================================================

// Only members of the HardwareEngineering department with job level >= 5 can
// view photos in device_prototypes
@id("prototypes access policy")
permit (
  principal,
  action == Action::"view",
  resource in Album::"device_prototypes"
)
when
{ principal.department == "HardwareEngineering" && principal.jobLevel >= 5 };

--------------------------------------------------------------------------------
(policy_set
  (comment)
  (comment)
  (policy
    (annotation
      (identifier)
      (string
        (string_content)))
    (effect)
    (scope
      (principal)
      (action
        (scope_constraint
          (entity_reference
            (identifier)
            (string
              (string_content)))))
      (resource
        (scope_constraint
          (entity_reference
            (identifier)
            (string
              (string_content))))))
    (condition
      (expression
        (or_expression
          (and_expression
            (relation_expression
              (unary_expression
                (member_expression
                  (variable)
                  (field_access
                    (identifier))))
              (unary_expression
                (member_expression
                  (string
                    (string_content)))))
            (relation_expression
              (unary_expression
                (member_expression
                  (variable)
                  (field_access
                    (identifier))))
              (unary_expression
                (member_expression
                  (integer))))))))))
