cedar/test/corpus/cli/policies_5_1.txt
================================================================================
policies_5_1
================================================================================

// https://github.com/cedar-policy/cedar/blob/v4.11.2/cedar-policy-cli/sample-data/sandbox_b/policies_5.cedar#L1-L7

// Alice's friends can view all of her photos
@id("alice's friends view policy")
permit (
  principal in UserGroup::"alice_friends",
  action == Action::"view",
  resource in Account::"alice"
);

--------------------------------------------------------------------------------

(policy_set
  (comment)
  (comment)
  (policy
    (annotation
      (identifier)
      (string
        (string_content)))
    (effect)
    (scope
      (principal
        (scope_constraint
          (entity_reference
            (identifier)
            (string
              (string_content)))))
      (action
        (scope_constraint
          (entity_reference
            (identifier)
            (string
              (string_content)))))
      (resource
        (scope_constraint
          (entity_reference
            (identifier)
            (string
              (string_content))))))))
