cedar/test/corpus/cli/policies_5_2.txt
================================================================================
policies_5_2
================================================================================

// https://github.com/cedar-policy/cedar/blob/v4.11.2/cedar-policy-cli/sample-data/sandbox_b/policies_5.cedar#L9-L14

// but, as a general rule, anything marked private can only be viewed by the
// account owner
@id("privacy rule")
forbid (principal, action, resource)
when { resource.private }
unless { resource.account has owner && resource.account.owner == principal };

--------------------------------------------------------------------------------

(policy_set
  (comment)
  (comment)
  (comment)
  (policy
    (annotation
      (identifier)
      (string
        (string_content)))
    (effect)
    (scope
      (principal)
      (action)
      (resource))
    (condition
      (member_expression
        (variable)
        (field_access
          (identifier))))
    (condition
      (binary_expression
        (has_expression
          (member_expression
            (variable)
            (field_access
              (identifier)))
          (identifier))
        (binary_expression
          (member_expression
            (variable)
            (field_access
              (identifier))
            (field_access
              (identifier)))
          (variable))))))
