cedar/test/corpus/cli/policies_6_2.txt
================================================================================
policies_6_2
================================================================================

// https://github.com/cedar-policy/cedar/blob/v4.11.2/cedar-policy-cli/sample-data/sandbox_b/policies_6.cedar#L9-L12

// but forbid all requests coming from this IP range
@id("ip_denylist")
forbid (principal, action, resource)
when { context.source_ip.isInRange(ip("222.222.222.0/24")) };

--------------------------------------------------------------------------------

(policy_set
  (comment)
  (comment)
  (policy
    (annotation
      (identifier)
      (string
        (string_content)))
    (effect)
    (scope
      (principal)
      (action)
      (resource))
    (condition
      (expression
        (or_expression
          (and_expression
            (relation_expression
              (unary_expression
                (member_expression
                  (variable)
                  (field_access
                    (identifier))
                  (method_call
                    (identifier)
                    (expression
                      (or_expression
                        (and_expression
                          (relation_expression
                            (unary_expression
                              (member_expression
                                (extension_call
                                  (name
                                    (identifier))
                                  (expression
                                    (or_expression
                                      (and_expression
                                        (relation_expression
                                          (unary_expression
                                            (member_expression
                                              (string
                                                (string_content)))))))))))))))))))))))))
