cedar/test/corpus/custom/empty_annotation.txt
================================================================================
empty_annotation
================================================================================

@warn
permit (principal, action, resource);

--------------------------------------------------------------------------------
(policy_set
  (policy
    (annotation
      (identifier))
    (effect)
    (scope
      (principal)
      (action)
      (resource))))
