cedar/test/corpus/custom/entity_record.txt
================================================================================
entity_record
================================================================================

permit (
  principal,
  action,
  resource == Document::{ owner: "alice", id: 1 }
);

--------------------------------------------------------------------------------
(policy_set
  (policy
    (effect)
    (scope
      (principal)
      (action)
      (resource
        (scope_constraint
          (entity_reference
            (identifier)
            (entity_record
              (ref_init
                (identifier)
                (string
                  (string_content)))
              (ref_init
                (identifier)
                (integer)))))))))
