cedar/test/corpus/custom/has_member.txt
================================================================================
has_member
================================================================================

permit (principal, action, resource)
when { context has foo.bar.baz };

--------------------------------------------------------------------------------
(policy_set
  (policy
    (effect)
    (scope
      (principal)
      (action)
      (resource))
    (condition
      (expression
        (or_expression
          (and_expression
            (relation_expression
              (unary_expression
                (member_expression
                  (variable)))
              (unary_expression
                (member_expression
                  (identifier)
                  (field_access
                    (identifier))
                  (field_access
                    (identifier)))))))))))
