cedar/test/corpus/custom/template_1.txt
================================================================================
template_1
================================================================================

// https://github.com/cedar-policy/rfcs/pull/98

template(?user: User, ?dept: Department) =>
  permit(principal == ?user, action, resource in ?dept);

--------------------------------------------------------------------------------
(policy_set
  (comment)
  (policy
    (template_declaration
      (slot
        (identifier)
        (type_reference
          (name
            (identifier))))
      (slot
        (identifier)
        (type_reference
          (name
            (identifier)))))
    (effect)
    (scope
      (principal
        (scope_constraint
          (slot
            (identifier))))
      (action)
      (resource
        (scope_constraint
          (slot
            (identifier)))))))
