cedar/test/corpus/custom/template_2.txt
================================================================================
template_2
================================================================================

template(?minLevel: Long) =>
  permit(principal, action, resource)
  when { principal.level >= ?minLevel };

--------------------------------------------------------------------------------
(policy_set
  (policy
    (template_declaration
      (slot
        (identifier)
        (type_reference
          (name
            (identifier)))))
    (effect)
    (scope
      (principal)
      (action)
      (resource))
    (condition
      (expression
        (or_expression
          (and_expression
            (relation_expression
              (unary_expression
                (member_expression
                  (variable)
                  (field_access
                    (identifier))))
              (unary_expression
                (member_expression
                  (slot
                    (identifier)))))))))))
