cedar/test/corpus/examples/gitapp_1.txt
================================================================================
gitapp_1
================================================================================

// a repo admin can pushRepo, pullRepo, forkRepo,
// addRepoReporter, addRepoContributor, addRepoAdmin
@id("resource.admins_Repo")
permit (
  principal,
  action in
    [GitApp::Action::"pushRepo",
     GitApp::Action::"pullRepo",
     GitApp::Action::"forkRepo",
     GitApp::Action::"addRepoReporter",
     GitApp::Action::"addRepoContributor",
     GitApp::Action::"addRepoAdmin"],
  resource in GitApp::Application::"GitApp"
)
when { principal in resource.admins };

--------------------------------------------------------------------------------
(policy_set
  (comment)
  (comment)
  (policy
    (annotation
      (identifier)
      (string
        (string_content)))
    (effect)
    (scope
      (principal)
      (action
        (scope_constraint
          (entity_list
            (entity_reference
              (identifier)
              (identifier)
              (string
                (string_content)))
            (entity_reference
              (identifier)
              (identifier)
              (string
                (string_content)))
            (entity_reference
              (identifier)
              (identifier)
              (string
                (string_content)))
            (entity_reference
              (identifier)
              (identifier)
              (string
                (string_content)))
            (entity_reference
              (identifier)
              (identifier)
              (string
                (string_content)))
            (entity_reference
              (identifier)
              (identifier)
              (string
                (string_content))))))
      (resource
        (scope_constraint
          (entity_reference
            (identifier)
            (identifier)
            (string
              (string_content))))))
    (condition
      (expression
        (or_expression
          (and_expression
            (relation_expression
              (unary_expression
                (member_expression
                  (variable)))
              (unary_expression
                (member_expression
                  (variable)
                  (field_access
                    (identifier)))))))))))
