cedar/test/corpus/examples/gitapp_3.txt
================================================================================
gitapp_3
================================================================================

// repo reporter can addIssue, pullRepo, forkRepo
@id("resource.reporters")
permit (
  principal,
  action in
    [GitApp::Action::"pullRepo",
     GitApp::Action::"forkRepo",
     GitApp::Action::"addIssue"],
  resource in GitApp::Application::"GitApp"
)
when { resource has reporters && principal in resource.reporters };

--------------------------------------------------------------------------------
(policy_set
  (comment)
  (policy
    (annotation
      (identifier)
      (string
        (string_content)))
    (effect)
    (scope
      (principal)
      (action
        (scope_constraint
          (entity_list
            (entity_reference
              (identifier)
              (identifier)
              (string
                (string_content)))
            (entity_reference
              (identifier)
              (identifier)
              (string
                (string_content)))
            (entity_reference
              (identifier)
              (identifier)
              (string
                (string_content))))))
      (resource
        (scope_constraint
          (entity_reference
            (identifier)
            (identifier)
            (string
              (string_content))))))
    (condition
      (expression
        (or_expression
          (and_expression
            (relation_expression
              (unary_expression
                (member_expression
                  (variable)))
              (unary_expression
                (member_expression
                  (identifier))))
            (relation_expression
              (unary_expression
                (member_expression
                  (variable)))
              (unary_expression
                (member_expression
                  (variable)
                  (field_access
                    (identifier)))))))))))
