cedar/test/corpus/examples/gitapp_5.txt
================================================================================
gitapp_5
================================================================================

// https://github.com/cedar-policy/cedar-examples/blob/c251f7d1ad171bd12dee5d1d7a1cceaec994518f/cedar-policy-language-in-action/GitApp/gitapp.cedar#L55-L65

// a repo contributor can pushRepo, pullRepo, forkRepo
@id("resource.contributors_Repo")
permit (
  principal,
  action in
    [GitApp::Action::"pushRepo",
     GitApp::Action::"pullRepo",
     GitApp::Action::"forkRepo"],
  resource in GitApp::Application::"GitApp"
)
when { resource has contributors && principal in resource.contributors };

--------------------------------------------------------------------------------

(policy_set
  (comment)
  (comment)
  (policy
    (annotation
      (identifier)
      (string
        (string_content)))
    (effect)
    (scope
      (principal)
      (action
        (scope_constraint
          (entity_list
            (entity_reference
              (identifier)
              (identifier)
              (string
                (string_content)))
            (entity_reference
              (identifier)
              (identifier)
              (string
                (string_content)))
            (entity_reference
              (identifier)
              (identifier)
              (string
                (string_content))))))
      (resource
        (scope_constraint
          (entity_reference
            (identifier)
            (identifier)
            (string
              (string_content))))))
    (condition
      (expression
        (or_expression
          (and_expression
            (relation_expression
              (unary_expression
                (member_expression
                  (variable)))
              (unary_expression
                (member_expression
                  (identifier))))
            (relation_expression
              (unary_expression
                (member_expression
                  (variable)))
              (unary_expression
                (member_expression
                  (variable)
                  (field_access
                    (identifier)))))))))))
