cedar/test/corpus/examples/tags_n_roles_1.txt
================================================================================
tags_n_roles_1
================================================================================

// https://github.com/cedar-policy/cedar-examples/blob/c251f7d1ad171bd12dee5d1d7a1cceaec994518f/cedar-example-use-cases/tags_n_roles/policies.cedar#L1-L84

@id("Role-A policy")
permit (
  principal in Role::"Role-A",
  action in [Action::"Role-A Actions"],
  resource
)
when
{
  // match the production_status tag if present for this role
  principal.allowedTagsForRole has "Role-A" &&
  (if
     principal.allowedTagsForRole["Role-A"] has production_status
   then
     if
       resource.tags has production_status
     then
       principal.allowedTagsForRole
         ["Role-A"]
         .production_status
         .contains
         (
           "ALL"
         ) ||
       resource.tags.production_status.contains("ALL") ||
       principal.allowedTagsForRole
         ["Role-A"]
         .production_status
         .containsAll
         (
           resource.tags["production_status"]
         )
     else
       true
   else
     true)
}
when
{
  // match the country tag if present for this role
  principal.allowedTagsForRole has "Role-A" &&
  (if
     principal.allowedTagsForRole["Role-A"] has country
   then
     if
       resource.tags has country
     then
       principal.allowedTagsForRole["Role-A"].country.contains("ALL") ||
       resource.tags.country.contains("ALL") ||
       principal.allowedTagsForRole
         ["Role-A"]
         .country
         .containsAll
         (
           resource.tags["country"]
         )
     else
       true
   else
     true)
}
when
{
  // match the stage tag if present for this role
  principal.allowedTagsForRole has "Role-A" &&
  (if
     principal.allowedTagsForRole["Role-A"] has stage
   then
     if
       resource.tags has stage
     then
       principal.allowedTagsForRole["Role-A"].stage.contains("ALL") ||
       resource.tags.stage.contains("ALL") ||
       principal.allowedTagsForRole
         ["Role-A"]
         .stage
         .containsAll
         (
           resource.tags["stage"]
         )
     else
       true
   else
     true)
};

--------------------------------------------------------------------------------

(policy_set
  (comment)
  (policy
    (annotation
      (identifier)
      (string
        (string_content)))
    (effect)
    (scope
      (principal
        (scope_constraint
          (entity_reference
            (identifier)
            (string
              (string_content)))))
      (action
        (scope_constraint
          (entity_list
            (entity_reference
              (identifier)
              (string
                (string_content))))))
      (resource))
    (condition
      (comment)
      (binary_expression
        (has_expression
          (member_expression
            (variable)
            (field_access
              (identifier)))
          (string
            (string_content)))
        (parenthesized_expression
          (if_expression
            (has_expression
              (member_expression
                (variable)
                (field_access
                  (identifier))
                (index_access
                  (string
                    (string_content))))
              (identifier))
            (if_expression
              (has_expression
                (member_expression
                  (variable)
                  (field_access
                    (identifier)))
                (identifier))
              (binary_expression
                (binary_expression
                  (member_expression
                    (variable)
                    (field_access
                      (identifier))
                    (index_access
                      (string
                        (string_content)))
                    (field_access
                      (identifier))
                    (method_call
                      (identifier)
                      (string
                        (string_content))))
                  (member_expression
                    (variable)
                    (field_access
                      (identifier))
                    (field_access
                      (identifier))
                    (method_call
                      (identifier)
                      (string
                        (string_content)))))
                (member_expression
                  (variable)
                  (field_access
                    (identifier))
                  (index_access
                    (string
                      (string_content)))
                  (field_access
                    (identifier))
                  (method_call
                    (identifier)
                    (member_expression
                      (variable)
                      (field_access
                        (identifier))
                      (index_access
                        (string
                          (string_content)))))))
              (true))
            (true)))))
    (condition
      (comment)
      (binary_expression
        (has_expression
          (member_expression
            (variable)
            (field_access
              (identifier)))
          (string
            (string_content)))
        (parenthesized_expression
          (if_expression
            (has_expression
              (member_expression
                (variable)
                (field_access
                  (identifier))
                (index_access
                  (string
                    (string_content))))
              (identifier))
            (if_expression
              (has_expression
                (member_expression
                  (variable)
                  (field_access
                    (identifier)))
                (identifier))
              (binary_expression
                (binary_expression
                  (member_expression
                    (variable)
                    (field_access
                      (identifier))
                    (index_access
                      (string
                        (string_content)))
                    (field_access
                      (identifier))
                    (method_call
                      (identifier)
                      (string
                        (string_content))))
                  (member_expression
                    (variable)
                    (field_access
                      (identifier))
                    (field_access
                      (identifier))
                    (method_call
                      (identifier)
                      (string
                        (string_content)))))
                (member_expression
                  (variable)
                  (field_access
                    (identifier))
                  (index_access
                    (string
                      (string_content)))
                  (field_access
                    (identifier))
                  (method_call
                    (identifier)
                    (member_expression
                      (variable)
                      (field_access
                        (identifier))
                      (index_access
                        (string
                          (string_content)))))))
              (true))
            (true)))))
    (condition
      (comment)
      (binary_expression
        (has_expression
          (member_expression
            (variable)
            (field_access
              (identifier)))
          (string
            (string_content)))
        (parenthesized_expression
          (if_expression
            (has_expression
              (member_expression
                (variable)
                (field_access
                  (identifier))
                (index_access
                  (string
                    (string_content))))
              (identifier))
            (if_expression
              (has_expression
                (member_expression
                  (variable)
                  (field_access
                    (identifier)))
                (identifier))
              (binary_expression
                (binary_expression
                  (member_expression
                    (variable)
                    (field_access
                      (identifier))
                    (index_access
                      (string
                        (string_content)))
                    (field_access
                      (identifier))
                    (method_call
                      (identifier)
                      (string
                        (string_content))))
                  (member_expression
                    (variable)
                    (field_access
                      (identifier))
                    (field_access
                      (identifier))
                    (method_call
                      (identifier)
                      (string
                        (string_content)))))
                (member_expression
                  (variable)
                  (field_access
                    (identifier))
                  (index_access
                    (string
                      (string_content)))
                  (field_access
                    (identifier))
                  (method_call
                    (identifier)
                    (member_expression
                      (variable)
                      (field_access
                        (identifier))
                      (index_access
                        (string
                          (string_content)))))))
              (true))
            (true)))))))
